<?xml version="1.0" encoding="utf-8"?> <!--文章、动态、转发等的举报菜单-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/detail"
        android:orderInCategory="100"
        android:title="@string/group_detail"/>

    <item
        android:id="@+id/report"
        android:orderInCategory="101"
        android:title="@string/report_group"/>

    <item
        android:id="@+id/sign_out"
        android:orderInCategory="102"
        android:title="@string/sign_out_group"
        app:showAsAction="never"/>

    <item
        android:id="@+id/star_group"
        android:orderInCategory="103"
        android:title="@string/star_group"/>

    <item
        android:id="@+id/share_inside"
        android:orderInCategory="104"
        android:title="@string/share_inside"/>

    <item
        android:id="@+id/manage"
        android:orderInCategory="105"
        android:title="@string/manage"/>


</menu>