<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/aurora_daynight_background">

    <LinearLayout
        style="@style/aurora_daynight_theme"
        android:elevation="6dip"
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/group_pic"
            android:layout_marginLeft="30dip"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/group_name"
            android:layout_marginLeft="10dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/aurora_font"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="小黄鸭组"/>

        <TextView
            android:layout_marginLeft="10dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/aurora_font"
            android:textSize="@dimen/normal_font"
            android:text="@string/manage"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dip"
                android:textSize="@dimen/normal_font"
                android:gravity="bottom"
                android:paddingLeft="10dip"
                android:text="@string/manage_member"/>

            <TextView
                android:id="@+id/manage_admin"
                style="@style/aurora_daynight_theme"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:paddingLeft="15dip"
                android:paddingRight="5dip"
                android:gravity="center_vertical"
                android:text="@string/manage_admin"
                android:textSize="17sp"
                android:drawableEnd="@drawable/arrow_right"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/aurora_background"/>

            <TextView
                android:id="@+id/manage_join_apply"
                style="@style/aurora_daynight_theme"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:paddingLeft="15dip"
                android:paddingRight="5dip"
                android:gravity="center_vertical"
                android:text="@string/manage_join_apply"
                android:textSize="17sp"
                android:drawableEnd="@drawable/arrow_right"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/aurora_background"/>

            <TextView
                android:id="@+id/manage_search_member"
                style="@style/aurora_daynight_theme"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:paddingLeft="15dip"
                android:paddingRight="5dip"
                android:gravity="center_vertical"
                android:text="@string/manage_search_member"
                android:textSize="17sp"
                android:drawableEnd="@drawable/arrow_right"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/aurora_background"/>

            <TextView
                android:id="@+id/manage_block_member"
                style="@style/aurora_daynight_theme"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:paddingLeft="15dip"
                android:paddingRight="5dip"
                android:gravity="center_vertical"
                android:text="@string/manage_block_member"
                android:textSize="17sp"
                android:drawableEnd="@drawable/arrow_right"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dip"
                android:textSize="@dimen/normal_font"
                android:gravity="bottom"
                android:paddingLeft="10dip"
                android:text="@string/manage_content"/>

            <TextView
                android:id="@+id/manage_area"
                style="@style/aurora_daynight_theme"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:paddingLeft="15dip"
                android:paddingRight="5dip"
                android:gravity="center_vertical"
                android:text="@string/manage_area"
                android:textSize="17sp"
                android:drawableEnd="@drawable/arrow_right"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/aurora_background"/>

            <TextView
                android:id="@+id/manage_report_by_hot"
                style="@style/aurora_daynight_theme"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:paddingLeft="15dip"
                android:paddingRight="5dip"
                android:gravity="center_vertical"
                android:text="@string/manage_report_by_hot"
                android:textSize="17sp"
                android:drawableEnd="@drawable/arrow_right"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/aurora_background"/>

            <TextView
                android:id="@+id/manage_report_by_time"
                style="@style/aurora_daynight_theme"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:paddingLeft="15dip"
                android:paddingRight="5dip"
                android:gravity="center_vertical"
                android:text="@string/manage_report_by_time"
                android:textSize="17sp"
                android:drawableEnd="@drawable/arrow_right"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dip"
                android:textSize="@dimen/normal_font"
                android:gravity="bottom"
                android:paddingLeft="10dip"
                android:text="@string/manage_setting"/>

            <TextView
                android:id="@+id/manage_theme_color"
                style="@style/aurora_daynight_theme"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:paddingLeft="15dip"
                android:paddingRight="5dip"
                android:gravity="center_vertical"
                android:text="@string/manage_group_theme_color"
                android:textSize="17sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/aurora_background"/>

            <TextView
                android:id="@+id/manage_member_name"
                style="@style/aurora_daynight_theme"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:paddingLeft="15dip"
                android:paddingRight="5dip"
                android:gravity="center_vertical"
                android:text="@string/manage_group_member_name"
                android:textSize="17sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/aurora_background"/>

            <TextView
                android:id="@+id/manage_pic"
                style="@style/aurora_daynight_theme"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:paddingLeft="15dip"
                android:paddingRight="5dip"
                android:gravity="center_vertical"
                android:text="@string/manage_group_pic"
                android:textSize="17sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/aurora_background"/>

            <TextView
                android:id="@+id/manage_introduction"
                style="@style/aurora_daynight_theme"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:paddingLeft="15dip"
                android:paddingRight="5dip"
                android:gravity="center_vertical"
                android:text="@string/manage_group_introduction"
                android:textSize="17sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/aurora_background"/>

            <TextView
                android:id="@+id/manage_join_type"
                style="@style/aurora_daynight_theme"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:paddingLeft="15dip"
                android:paddingRight="5dip"
                android:gravity="center_vertical"
                android:text="@string/manage_join_type"
                android:textSize="17sp"
                android:drawableEnd="@drawable/arrow_right"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dip"
                android:textSize="@dimen/normal_font"
                android:gravity="bottom"
                android:paddingLeft="10dip"
                android:text="@string/manage_etc"/>

            <TextView
                android:id="@+id/manage_log"
                style="@style/aurora_daynight_theme"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:paddingLeft="15dip"
                android:paddingRight="5dip"
                android:gravity="center_vertical"
                android:text="@string/manage_log"
                android:textSize="17sp"
                android:drawableEnd="@drawable/arrow_right"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/aurora_background"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="30dip"
                android:background="@color/aurora_background"/>

            <TextView
                android:id="@+id/resignation"
                style="@style/aurora_daynight_theme"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:paddingLeft="15dip"
                android:paddingRight="5dip"
                android:gravity="center"
                android:text="@string/resignation"
                android:textSize="17sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="30dip"
                android:background="@color/aurora_background"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>