<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">
    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dip"
        android:src="@mipmap/aurora_icon"
        android:layout_gravity="center"
        app:riv_oval="true" />
    <TextView
        android:layout_marginTop="20dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/app_name"
        android:layout_gravity="center"/>

   <androidx.legacy.widget.Space
        android:layout_width="match_parent"
        android:layout_height="20dip"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <ImageView
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:src="@drawable/ic_baseline_person_24"/>
        <EditText
            android:id="@+id/login_name"
            android:layout_width="250dip"
            android:layout_height="50dip"
            android:maxLines="1"
            android:inputType="text"
            android:drawableBottom="@drawable/line"
            android:drawableTint="@color/aurora_grey"
            android:cursorVisible="true"
            android:hint="@string/content_username_hint"/>

    </LinearLayout> <!--账户-->

   <androidx.legacy.widget.Space
    android:layout_width="match_parent"
    android:layout_height="10dip"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:layout_marginVertical="0dp"
            android:src="@drawable/ic_baseline_lock_24"/>
        <EditText
            android:id="@+id/login_password"
            android:inputType="textPassword"
            android:layout_width="250dip"
            android:layout_height="50dip"
            android:maxLines="1"
            android:drawableBottom="@drawable/line"
            android:drawableTint="@color/aurora_grey"
            android:cursorVisible="true"
            android:hint="@string/content_password_hint"/> <!--密码-->

    </LinearLayout>

   <androidx.legacy.widget.Space
        android:layout_width="match_parent"
        android:layout_height="50dip"/>

    <Button
        android:id="@+id/login"
        android:layout_gravity="center"
        android:layout_width="200dip"
        android:layout_height="40dip"
        android:textSize="@dimen/normal_font"
        android:background="@drawable/round_shape"
        android:text="@string/login" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="50dip"
        android:autoLink="all"
        android:text="@string/register_u" />
</LinearLayout>